fix extension manifest for file scheme

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,7 +10,7 @@
       "js": ["mobile.js"]
     },
     {
-      "matches": ["*://*/index.html"],
+      "matches": ["*://*/index.html", "file://*/*"],
       "js": ["table.js"]
     }
   ]
